welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if (Math.abs(100-n)){return true}
              ^nearHundred:3: error: type mismatch;
 found   : Int
 required: Boolean
  else{ if (Math.abs(200-n)){return true}}
                    ^