welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (Math.abs(100-n)){return true}
  else{ if (Math.abs(200-n)){return true}}
  return false}